Solved the logo issue, and the overlaping genres in the mobile version

--- a/Pages/bored.css
+++ b/Pages/bored.css
@@ -4,7 +4,13 @@ body{
     background-repeat: repeat;
 }
 
-
+#main {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+      padding: 50px;
+      border-radius: 20px;
+  }
 
 
 #movie-search{
@@ -19,17 +25,18 @@ body{
     justify-content: center;
     align-items: center;
   }
-
+/* 
 label{  
     left: 50%;
-  } 
+  }  */
 
 #logo-netflix{
-    display: flex;
     margin-top: 4rem;
 }
 
-
+[type="checkbox"]+span:not(.lever) {
+    display: inherit;
+}
 
 #page-title{
     margin-top: 0rem;
