--- a/Pages/bored.css
+++ b/Pages/bored.css
@@ -37,3 +37,25 @@ body{
 #page-title{
     margin-top: 0rem;
 }
+
+.mov-poster {
+    width: 200px;
+    height: 300px;
+    box-shadow: 0 3px 5px -1px rgb(0 0 0 / 10%), 0 6px 10px 0 rgb(0 0 0 / 7%), 0 1px 18px 0 rgb(0 0 0 / 6%);
+}
+
+.r {
+    margin-top: 1rem;
+}
+
+.mov-header {
+    text-transform: uppercase;
+    font-weight: 600;
+    letter-spacing: -0.02rem;
+    border-top: solid 2px #26a69a;
+    border-bottom: solid 2px #26a69a;
+    padding: .3rem 0rem;
+    max-width: 200px;
+    margin-left: auto;
+    margin-right: auto;
+}
