--- a/Pages/bored.css
+++ b/Pages/bored.css
@@ -59,3 +59,19 @@ body{
     margin-left: auto;
     margin-right: auto;
 }
+
+@media (max-width: 1430px) {
+    #bored-title {
+        width: 100%
+    }
+}
+
+@media (min-width: 601px) and (max-width: 1010px){
+.row .col.m4 {
+    width: 50%;
+}
+}
+
+.mov-desc {
+    height: 200px;
+}
