Resolved a minor issue with the text aligning for iPhone X platform

--- a/Develop/css/bored.css
+++ b/Develop/css/bored.css
@@ -101,3 +101,11 @@ body{
   #active-page {
     border-bottom: solid 2px white;
   }
+
+ /* Fixed issue for the iPhone X display */
+
+  @media (max-width: 430px){
+  [type="checkbox"]+span:not(.lever) {
+    font-size: 12px;
+  }
+}
